--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -10,31 +10,32 @@
         android:id="@+id/editText"
         android:layout_width="193dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Name"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="100dp"
         android:layout_marginTop="70dp"
+        android:ems="10"
+        android:hint="               Name"
+        android:inputType="textPersonName"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="348dp" />
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="195dp"
+        android:layout_width="193dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
         android:ems="10"
+        android:hint="            Password"
         android:inputType="textPersonName"
-        android:hint="password"
-        android:layout_margin="10dp"
         tools:layout_editor_absoluteX="207dp"
         tools:layout_editor_absoluteY="348dp" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="193dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"
         android:text="login"
-        android:layout_margin="10dp"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="395dp" />
 
