--- a/app/src/main/res/layout/show_info_fragment.xml
+++ b/app/src/main/res/layout/show_info_fragment.xml
@@ -14,6 +14,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycel_view2"
         android:layout_marginTop="20dp"
+        android:paddingLeft="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
